<resources>
    <string name="app_name">OnThiVNU-EPT</string>
    <string name="app_n_thi_vnu_ept">APP-Ôn Thi VNU-EPT</string>
    <string name="nh_m_ph_t_tri_n_dd_n_phi_n_b_n_hi_n_t_i_1_0_beta">Nhóm phát triển: DDĐ\n Phiên bản hiện tại:1.0 (beta)</string>
    <string name="version_1_0">version:1.0</string>
    <string name="title_activity_on_theo_phan">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="n_thi_theo_ph_n">Ôn thi theo phần</string>
    <string name="n_thi_ng_u_nhi_n">Ôn thi ngẫu nhiên</string>
    <string name="thi_nhanh">Thi nhanh</string>
    <string name="thi_th">Thi thử</string>
    <string name="about_us">About Us</string>
    <string name="exit">EXIT</string>
    <string name="n_p_b_i">Nộp bài</string>
    <string name="in_part_2_you_will_hear_a_conversation_after_the_second_listening_there_are_six_incomplete_sentences_and_four_possible_options_provided_for_each_gap_select_the_best_option_to_complete_the_sentence">In Part 2 you will hear a conversation. After the second listening, there are six incomplete sentences and four possible options provided for each gap. Select the best option to complete the sentence.</string>
    <string name="in_part_1_you_will_hear_ten_conversations_between_two_people_after_the_second_listening_of_each_conversation_you_will_hear_a_question_and_there_are_four_possible_answers_provided_select_the_best_answer_to_each_question">In Part 1 you will hear ten conversations between two people. After the second listening of each conversation, you will hear a question and there are four possible answers provided. Select the best answer to each question.</string>
    <string name="in_part_4_you_will_hear_part_of_a_lecture_after_the_second_listening_there_is_a_summary_of_the_lecture_with_eight_gaps_select_the_best_option_for_each_gap_to_complete_the_summary">In Part 4 you will hear part of a lecture. After the second listening, there is a summary of the lecture with eight gaps. Select the best option for each gap to complete the summary.</string>
    <string name="in_part_3_you_will_hear_a_talk_after_the_second_listening_there_are_eight_questions_select_the_best_answer_to_each_question">In Part 3 you will hear a talk. After the second listening, there are eight questions. Select the best answer to each question.</string>
    <string name="previos">Previos</string>
    <string name="next">Next</string>
    <string name="part_5">Part 5:</string>
    <string name="part_6">Part 6:</string>
    <string name="part_7">Part 7:</string>
    <string name="part_8">Part 8:</string>
    <string name="xong">Xong</string>
    <string name="ngu_n">Nguồn:</string>
    <string name="reading_part_3">READING PART 3</string>
    <string name="ki_m_tra">kiểm tra</string>
    <string name="ki_m_tra">kiểm tra</string>
    <string name="reading_part_4">READING PART 4</string>
    <string name="ki_m_tra">kiểm tra</string>
    <string name="listening_part_1">LISTENING PART 1</string>
    <string name="listening_part_2">LISTENING PART 2</string>
    <string name="listening_part_3">LISTENING PART 3</string>
    <string name="listening_part_4">LISTENING PART 4</string>
    <string name="ok">OK</string>
    <string name="l_a_ch_n_c_u_h_i">LỰA CHỌN CÂU HỎI</string>
    <string name="reading_part_1">Reading Part 1</string>
    <string name="reading_part_2">Reading Part 2</string>
    <string name="ti_p_t_c">TIẾP TỤC</string>
</resources>