<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="690dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnOnThiTheoPhan"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button1"
            android:text="@string/n_thi_theo_ph_n">

        </Button>

        <Button
            android:id="@+id/btnOnThiNgauNhien"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button1"
            android:text="@string/n_thi_ng_u_nhi_n">

        </Button>

        <Button
            android:id="@+id/btnThiNhanh"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button1"
            android:text="@string/thi_nhanh">

        </Button>

        <Button
            android:id="@+id/btnThiThu"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button1"
            android:text="@string/thi_th">

        </Button>

        <Button
            android:id="@+id/btnAboutUs"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button1"
            android:text="@string/about_us">

        </Button>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button1"
            android:text="@string/exit">

        </Button>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/version_1_0">

    </TextView>
</LinearLayout>