<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background2"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".AboutUs_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_n_thi_vnu_ept"

        android:textColor="@color/colorWhite"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/nh_m_ph_t_tri_n_dd_n_phi_n_b_n_hi_n_t_i_1_0_beta"
        android:textColor="@color/colorWhite"
        android:textSize="20sp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ngu_n"
        android:textColor="@color/colorWhite"
        android:textSize="20sp">

    </TextView>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button1"
        android:text="@string/ok">

    </Button>
</LinearLayout>