<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDirectionPart3"
        android:text="@string/in_part_3_you_will_hear_a_talk_after_the_second_listening_there_are_eight_questions_select_the_best_answer_to_each_question">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/previos"
            android:background="@drawable/custom_button1"
            android:id="@+id/btnPrevios3">

        </Button>
        <ImageView
            android:layout_marginLeft="80dp"
            android:id="@+id/image3tn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/listen_icon1">

        </ImageView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:text="@string/next"
            android:background="@drawable/custom_button1"
            android:id="@+id/btnNext3">

        </Button>
    </LinearLayout>
    <ListView
        android:id="@+id/myListQuestionPart3tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>