<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_part_1_you_will_hear_ten_conversations_between_two_people_after_the_second_listening_of_each_conversation_you_will_hear_a_question_and_there_are_four_possible_answers_provided_select_the_best_answer_to_each_question">

    </TextView>

    <ListView
        android:id="@+id/myListQuestionPart1tn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDirectionPart23"
        android:text="@string/in_part_2_you_will_hear_a_conversation_after_the_second_listening_there_are_six_incomplete_sentences_and_four_possible_options_provided_for_each_gap_select_the_best_option_to_complete_the_sentence">

    </TextView>
    <ImageView
        android:id="@+id/imagePart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/listen_icon1">

    </ImageView>
    <ListView
        android:id="@+id/myListQuestionPart2tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_part_3_you_will_hear_a_talk_after_the_second_listening_there_are_eight_questions_select_the_best_answer_to_each_question">

    </TextView>
    <ImageView
        android:id="@+id/imagePart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/listen_icon1">

    </ImageView>
    <ListView
        android:id="@+id/myListQuestionPart3tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_part_4_you_will_hear_part_of_a_lecture_after_the_second_listening_there_is_a_summary_of_the_lecture_with_eight_gaps_select_the_best_option_for_each_gap_to_complete_the_summary">

    </TextView>
    <ImageView
        android:id="@+id/imagePart4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/listen_icon1">

    </ImageView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/txtP4tn">

        </TextView>
    </ScrollView>
    <ListView
        android:id="@+id/myListQuestionPart4tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/txtP5tn">

        </TextView>
    </ScrollView>
    <ListView
        android:id="@+id/myListQuestionPart5tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/txtP6tn">

        </TextView>
    </ScrollView>
    <ListView
        android:id="@+id/myListQuestionPart6tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/txtP7tn">

        </TextView>
    </ScrollView>
    <ListView
        android:id="@+id/myListQuestionPart7tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/txtP8tn">

        </TextView>
    </ScrollView>
    <ListView
        android:id="@+id/myListQuestionPart8tn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>